// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Form Example 1`] = `
<div style="display: flex; flex-direction: column; gap: var(--ds-size-6);">
  <fieldset id="rankings">
    <legend data-weight="medium">
      <h4>
        Skjema
      </h4>
    </legend>
    <div
      data-color="accent"
      style="--uds-progressBar-progress: 10%;"
    >
      <label
        data-weight="medium"
        for="progressBar"
      >
        Side 1 av 10
      </label>
      <u-progress
        value="1"
        id="progressBar"
        aria-busy="false"
        aria-label="Side 1 av 10"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="10"
        role="progressbar"
        max="10"
        style="--percentage: 10%;"
      >
      </u-progress>
    </div>
    <table>
      <thead>
        <tr>
          <th>
            Påstander
          </th>
          <th>
            Uenig
          </th>
          <th>
            Nøytral
          </th>
          <th>
            Enig
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Påstand 1
          </td>
          <td>
            <div>
              <input
                id="rankings.Påstand 1-Uenig"
                aria-label="Uenig i påstand Påstand 1"
                type="radio"
                value="Uenig"
              >
            </div>
          </td>
          <td>
            <div>
              <input
                id="rankings.Påstand 1-Nøytral"
                aria-label="Nøytral i påstand Påstand 1"
                type="radio"
                value="Nøytral"
              >
            </div>
          </td>
          <td>
            <div>
              <input
                id="rankings.Påstand 1-Enig"
                aria-label="Enig i påstand Påstand 1"
                type="radio"
                value="Enig"
              >
            </div>
          </td>
        </tr>
        <tr>
          <td>
            Påstand 2
          </td>
          <td>
            <div>
              <input
                id="rankings.Påstand 2-Uenig"
                aria-label="Uenig i påstand Påstand 2"
                type="radio"
                value="Uenig"
              >
            </div>
          </td>
          <td>
            <div>
              <input
                id="rankings.Påstand 2-Nøytral"
                aria-label="Nøytral i påstand Påstand 2"
                type="radio"
                value="Nøytral"
              >
            </div>
          </td>
          <td>
            <div>
              <input
                id="rankings.Påstand 2-Enig"
                aria-label="Enig i påstand Påstand 2"
                type="radio"
                value="Enig"
              >
            </div>
          </td>
        </tr>
        <tr>
          <td>
            Påstand 3
          </td>
          <td>
            <div>
              <input
                id="rankings.Påstand 3-Uenig"
                aria-label="Uenig i påstand Påstand 3"
                type="radio"
                value="Uenig"
              >
            </div>
          </td>
          <td>
            <div>
              <input
                id="rankings.Påstand 3-Nøytral"
                aria-label="Nøytral i påstand Påstand 3"
                type="radio"
                value="Nøytral"
              >
            </div>
          </td>
          <td>
            <div>
              <input
                id="rankings.Påstand 3-Enig"
                aria-label="Enig i påstand Påstand 3"
                type="radio"
                value="Enig"
              >
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </fieldset>
  <div style="display: flex; justify-content: flex-end; gap: var(--ds-size-4);">
    <button
      data-variant="secondary"
      type="button"
    >
      Neste
      <svg
        xmlns="http://www.w3.org/2000/svg"
        width="1em"
        height="1em"
        fill="none"
        viewbox="0 0 24 24"
        focusable="false"
        role="img"
        aria-hidden="true"
      >
        <path
          fill="currentColor"
          d="M14.088 6.873a.75.75 0 0 1 .942.097l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5a.75.75 0 0 1-1.06-1.06l3.22-3.22H5a.75.75 0 0 1-.75-.74V12a.75.75 0 0 1 .75-.75h12.19l-3.22-3.22a.75.75 0 0 1 .118-1.157"
        >
        </path>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Load Example 1`] = `
<div
  data-color="support1"
  style="--uds-progressBar-progress: 5%;"
>
  <label
    data-weight="medium"
    for="progressBar"
  >
    Laster.. 5%
  </label>
  <u-progress
    value="5"
    id="progressBar"
    aria-busy="false"
    aria-label="Laster.. 5%"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="5"
    role="progressbar"
    max="100"
    style="--percentage: 5%;"
  >
  </u-progress>
</div>
`;

exports[`Preview 1`] = `
<div style="--uds-progressBar-progress: 30%;">
  <label
    data-weight="medium"
    for="progressBar"
  >
    Label 3 av 10
  </label>
  <u-progress
    value="3"
    id="progressBar"
    aria-busy="false"
    aria-label="Label 3 av 10"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="30"
    role="progressbar"
    max="10"
    style="--percentage: 30%;"
  >
  </u-progress>
</div>
`;
